# cloud-sandbox

./: .gitignore  Dockerfile  README.md  pyproject.toml
agents/: __init__.py  deepagent_factory.py  sandbox_backend.py  sandbox_client.py  tools.py
cloud_sandbox/: __init__.py  __main__.py  auth.py  connectors.py  executor.py  models.py  server.py  sessions.py  validation.py
examples/: run_churn_agent.py
k8s/base/: deployment.yaml  gateway.yaml  httproute.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
terraform/: .gitignore  README.md  deploy.sh  main.tf  outputs.tf  terraform.tfvars.example
terraform/modules/workload_identity/: main.tf  outputs.tf  variables.tf
terraform/stages/01-project/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/stages/02-cluster/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/stages/03-workload-identity/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/stages/04-kubernetes/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/stages/05-data-access/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars  variables.tf
tests/: test_executor.py  test_server.py  test_sessions.py  test_validation.py
