[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-sandbox"
version = "0.1.0"
description = "Prototype sandbox service for agent-driven code execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.5.0",
  "langchain-google-genai>=3.0.0",
]
license = {text = "MIT"}
authors = [
  {name = "Metricsamp"},
]

[project.scripts]
cloud-sandbox = "cloud_sandbox.__main__:main"

[tool.setuptools]
packages = ["cloud_sandbox", "agents"]

[tool.uv]
package = true

[dependency-groups]
dev = []
